--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "openai": "^4.82.0"
+    "openai": "^4.82.0",
+    "zod": "^3.24.1"
   }
 }
